--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Data Engineering Essentials
+site_name: Santoro Data Lab
 site_url: https://sitename.example
 theme:
   name: material
@@ -13,7 +13,7 @@ theme:
       toggle:
         icon: material/weather-sunny
         name: Dark mode
-      primary: deep orange
+      primary: black
       accent: indigo
 
     # Light Mode
@@ -21,7 +21,7 @@ theme:
       toggle:
         icon: material/weather-night
         name: Light mode
-      primary: deep orange
+      primary: black
       accent: indigo
 
 markdown_extensions:
